tests/ui/coherence/indirect-impl-for-trait-obj-coherence.next.stderr
error[E0284]: type annotations needed: cannot satisfy `<dyn Object<U, Output = T> as Object<U>>::Output == T`
  --> $DIR/indirect-impl-for-trait-obj-coherence.rs:25:41
   |
LL |     foo::<dyn Object<U, Output = T>, U>(x)
   |                                         ^ cannot satisfy `<dyn Object<U, Output = T> as Object<U>>::Output == T`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0284`.
